third_party/move/move-compiler-v2/tests/acquires-checker/v1-borrow-tests/borrow_global_acquires_return_reference_invalid_1.exp

Diagnostics:
error: cannot return a reference derived from global `A::T1`
   ┌─ tests/acquires-checker/v1-borrow-tests/borrow_global_acquires_return_reference_invalid_1.move:10:9
   │
10 │         borrow_global_mut<T1>(signer::address_of(account))
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │         │
   │         returned here
   │         previous mutable global borrow
